@@ -46,8 +46,8 @@ div#formstatus-action {
 	}
 .icon img {
     padding:0.5em;
-	height:100%;
 	width:100px; 
+	height:100px; 
     border:4px solid #eef;
     background-color:#eee;
 	}
