@@ -1,0 +1,4 @@
+ALTER TABLE address ADD
+	privateaddress	enum('N','Y') not null;
+ALTER TABLE phone ADD
+	privatephone	enum('N','Y') not null;
